--- a/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
@@ -45,8 +45,8 @@
       </div>
     </main>
     <script type="module">
-      import { html, LitElement } from 'lit';
-      import { BlockquoteMixinSlotContent } from '../src/index.js';
+      import {html, LitElement} from 'lit';
+      import {BlockquoteMixinSlotContent} from '../src/index.js';
 
       const element = document.querySelector('slot-element');
 
@@ -55,7 +55,7 @@
           return;
         }
         const newElementP = document.createElement('p');
-        Object.assign(newElementP, { slot: 'fullName', textContent: 'Commit Queue' });
+        Object.assign(newElementP, {slot: 'fullName', textContent: 'Commit Queue'});
         element.appendChild(newElementP);
       });
 
@@ -72,8 +72,8 @@
           this.addEventListener('slotchanges', this._onSlotChanges);
         }
 
-        _onSlotChanges = ev => {
-          const { detail } = ev;
+        _onSlotChanges = (ev) => {
+          const {detail} = ev;
           console.info(detail);
           console.info('assignedNodes ==>', detail.assignedNodesContent.assignedNodes);
         };
