--- a/site/playground-dev/index.html
+++ b/site/playground-dev/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <title>Document</title>
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script type="module" src="./index-playground.js"></script>
+    <link rel="icon" href="data:image/x-icon;base64,B" />
+    <script type="module" src="./@blockquote/playground-elements/dist/playground-ide.js"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -15,8 +16,6 @@
       line-numbers
       line-wrapping
       resizable
-      style="--playground-preview-width: 62%"
-    >
-    </playground-ide>
+      style="--playground-preview-width: 62%"></playground-ide>
   </body>
 </html>
