chore: update site [skip lerna]

--- a/site/playground-dev/index.html
+++ b/site/playground-dev/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:image/x-icon;base64,B" />
-    <script type="module" src="./@blockquote/playground-elements/dist/playground-ide.js"></script>
+    <script type="module" src="./blockquote/playground-elements/lib/playground-ide.js"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
