chore: update site [skip lerna]

--- a/site/blockquote-base-style-helpers/document-styles.html
+++ b/site/blockquote-base-style-helpers/document-styles.html
@@ -2,7 +2,8 @@
     <title>Document styles - blockquote-base-style-helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">    <meta name="description" content="Demo Document styles - blockquote-base-style-helpers">
+    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
+    <meta name="description" content="Demo Document styles - blockquote-base-style-helpers">
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -33,4 +34,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-8e9febac162ee1fcde621decc978d60b-BKkSCuOo.js"></script></body></html>
+<script type="module" src="./assets/inline-module-4d0076b399caa7b0970fca44ac42ae67-DF4JxLzJ.js"></script></body></html>
