--- a/site/blockquote-base-style-helpers/shared-styles.html
+++ b/site/blockquote-base-style-helpers/shared-styles.html
@@ -2,7 +2,8 @@
     <title>Shared styles - blockquote-base-style-helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">    <meta name="description" content="Demo Shared styles - blockquote-base-style-helpers">
+    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
+    <meta name="description" content="Demo Shared styles - blockquote-base-style-helpers">
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -34,4 +35,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-0b3a2a7b480d83165a25a11af1094ee2-CRAVoZUx.js"></script></body></html>
+<script type="module" src="./assets/inline-module-54b3a232056371a5933d71e0eab62f68-CRAVoZUx.js"></script></body></html>
