--- a/site/playground-dev/html-file.html
+++ b/site/playground-dev/html-file.html
@@ -251,7 +251,7 @@
       </div>
     </div>
     <script type="module">
-      import './define/blk-material.js';
+      import './src/define/blk-material.js';
       import './src/tokens/dark-color-scheme.js';
       import {ROLES} from './src/tokens/generate-tokens.js';
       const sectionTone = document.querySelector('section');
