chore: from wtr to vitest

--- a/packages/base/ajax-provider/demo/base.html
+++ b/packages/base/ajax-provider/demo/base.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <ajax-provider-component></ajax-provider-component>
-    <script type="module" src="./ajax-provider-component.js"></script>
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
