--- a/packages/base/blockquote-base-embedded-webview/demo/index.html
+++ b/packages/base/blockquote-base-embedded-webview/demo/index.html
@@ -27,6 +27,6 @@
         data-description="other - description"></template>
     </blockquote-base-embedded-webview>
 
-    <script type="module" src="../src/define/blockquote-base-embedded-webview.js"></script>
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
