--- a/packages/base/blockquote-base-style-helpers/demo/document-styles.html
+++ b/packages/base/blockquote-base-style-helpers/demo/document-styles.html
@@ -34,8 +34,7 @@
       <document-element></document-element>
     </main>
     <script type="module">
-      import {LitElement, html, css} from 'lit';
-      import './theme/theme.js';
+      import {LitElement, html, css} from './entry.js';
 
       class DocumentElement extends LitElement {
         static get styles() {
