--- a/packages/controllers/blockquote-controller-context-meta/demo/base.html
+++ b/packages/controllers/blockquote-controller-context-meta/demo/base.html
@@ -47,6 +47,6 @@
       </p>
       <my-app></my-app>
     </main>
-    <script type="module" src="./my-app.js"></script>
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
