--- a/packages/controllers/blockquote-controller-rxjs/demo/base.html
+++ b/packages/controllers/blockquote-controller-rxjs/demo/base.html
@@ -34,9 +34,7 @@
       <blockquote-controller-rxjs-demo></blockquote-controller-rxjs-demo>
     </main>
     <script type="module">
-      import {html, LitElement} from 'lit';
-      import {map, fromEvent} from 'rxjs';
-      import {BlockquoteControllerRxjs} from '../src/index.js';
+      import {html, LitElement, map, fromEvent, BlockquoteControllerRxjs} from './entry.js';
 
       class BlockquoteControllerRxjsDemo extends LitElement {
         static get is() {
