--- a/packages/controllers/blockquote-controller-xstate/demo/base.html
+++ b/packages/controllers/blockquote-controller-xstate/demo/base.html
@@ -47,6 +47,6 @@
         </p>
       </xstate-counter>
     </main>
-    <script type="module" src="./xstate-counter.js"></script>
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
