--- a/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
@@ -45,8 +45,7 @@
       </div>
     </main>
     <script type="module">
-      import {html, LitElement} from 'lit';
-      import {BlockquoteMixinSlotContent} from '../src/index.js';
+      import {html, LitElement, BlockquoteMixinSlotContent} from './entry.js';
 
       const element = document.querySelector('slot-element');
 
