--- a/packages/base/ajax-provider/demo/index.html
+++ b/packages/base/ajax-provider/demo/index.html
@@ -20,9 +20,7 @@
       <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./dm-currecies.html" data-option="Data manager"></template>
     </blockquote-base-embedded-webview>
-    <script type="module">
-      // eslint-disable-next-line import/no-extraneous-dependencies
-      import '@blockquote-web-components/blockquote-base-embedded-webview/blockquote-base-embedded-webview.js';
-    </script>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
