--- a/packages/base/blockquote-base-meta/demo/base.html
+++ b/packages/base/blockquote-base-meta/demo/base.html
@@ -123,7 +123,7 @@
       </article>
 
       <script type="module">
-        import {BlockquoteBaseMeta} from '../src/index.js';
+        import {BlockquoteBaseMeta} from './entry.js';
 
         const myDefault = new BlockquoteBaseMeta({
           key: 'basic',
