--- a/packages/base/blockquote-base-meta/demo/index.html
+++ b/packages/base/blockquote-base-meta/demo/index.html
@@ -19,9 +19,7 @@
     <blockquote-base-embedded-webview screen-size-selected="5" heading="blockquote-base-meta">
       <template data-src="./base.html" data-option="Base"></template>
     </blockquote-base-embedded-webview>
-    <script type="module">
-      // eslint-disable-next-line import/no-extraneous-dependencies
-      import '@blockquote-web-components/blockquote-base-embedded-webview/blockquote-base-embedded-webview.js';
-    </script>
+
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
