--- a/packages/base/blockquote-base-style-helpers/demo/index.html
+++ b/packages/base/blockquote-base-style-helpers/demo/index.html
@@ -20,9 +20,6 @@
       <template data-src="./document-styles.html" data-option="Document Styles"></template>
       <template data-src="./shared-styles.html" data-option="Shared Styles"></template>
     </blockquote-base-embedded-webview>
-    <script type="module">
-      // eslint-disable-next-line import/no-extraneous-dependencies
-      import '@blockquote-web-components/blockquote-base-embedded-webview/blockquote-base-embedded-webview.js';
-    </script>
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
