--- a/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
+++ b/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
@@ -35,8 +35,13 @@
     </main>
 
     <script type="module">
-      import {LitElement, html, css} from 'lit';
-      import {getComponentSharedStyles, setComponentSharedStyles} from '../src/index.js';
+      import {
+        LitElement,
+        html,
+        css,
+        getComponentSharedStyles,
+        setComponentSharedStyles,
+      } from './entry.js';
 
       setComponentSharedStyles(
         'shared-element-shared-styles',
