--- a/packages/controllers/blockquote-controller-xstate/demo/index.html
+++ b/packages/controllers/blockquote-controller-xstate/demo/index.html
@@ -21,9 +21,7 @@
       heading="blockquote-controller-xstate">
       <template data-src="./base.html" data-option="Base"></template>
     </blockquote-base-embedded-webview>
-    <script type="module">
-      // eslint-disable-next-line import/no-extraneous-dependencies
-      import '@blockquote-web-components/blockquote-base-embedded-webview/blockquote-base-embedded-webview.js';
-    </script>
+
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
