--- a/packages/directives/blockquote-directive-ariaidref-slot/demo/base.html
+++ b/packages/directives/blockquote-directive-ariaidref-slot/demo/base.html
@@ -13,6 +13,18 @@
         margin: 0;
         font-family: sans-serif;
       }
+
+      [data-embedded] .sr-only {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
+      }
     </style>
   </head>
   <body>
@@ -42,7 +54,7 @@
       </wrapper-dialog>
     </main>
     <script type="module">
-      import './wrapper-dialog.js';
+      import './entry.js';
 
       const openDialog = document.getElementById('open-dialog');
 
