--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
@@ -39,8 +39,7 @@
     </main>
 
     <script type="module">
-      import {html, LitElement, css, svg} from 'lit';
-      import {blockquoteDirectiveSvgToDataImage} from '../src/index.js';
+      import {html, LitElement, css, svg, blockquoteDirectiveSvgToDataImage} from './entry.js';
 
       class BgElement extends LitElement {
         static get properties() {
