--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
@@ -36,8 +36,7 @@
     </main>
 
     <script type="module">
-      import {html, LitElement, css} from 'lit';
-      import {blockquoteDirectiveSvgToDataImage} from '../src/index.js';
+      import {html, LitElement, css, blockquoteDirectiveSvgToDataImage} from './entry.js';
 
       class BgElement extends LitElement {
         static get styles() {
