--- a/packages/mixins/blockquote-mixin-slot-content/demo/index.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/index.html
@@ -23,9 +23,6 @@
         data-src="./composition-with-slots.html"
         data-option="Composition with slots"></template>
     </blockquote-base-embedded-webview>
-    <script type="module">
-      // eslint-disable-next-line import/no-extraneous-dependencies
-      import '@blockquote-web-components/blockquote-base-embedded-webview/blockquote-base-embedded-webview.js';
-    </script>
+    <script type="module" src="./entry.js"></script>
   </body>
 </html>
