--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -60,8 +60,7 @@
       </div>
     </main>
     <script type="module">
-      import {html, LitElement} from 'lit';
-      import {BlockquoteMixinSlotContent} from '../src/index.js';
+      import {html, LitElement, BlockquoteMixinSlotContent} from './entry.js';
 
       const element = document.querySelector('slot-element');
 
